iss-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: iis-api-service
spec:
  selector:
    app: iis-api
  ports:  
    - protocol: TCP
      port: 80
      targetPort: 5000
